improved sizing in services section for mobile and fix navbar sizing of elements (list of sections font size on mobile)

--- a/src/css/services.module.css
+++ b/src/css/services.module.css
@@ -17,14 +17,40 @@
 }
 .service-title {
   text-align: center;
-  margin: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  font-size: 2.6rem;
 }
-.service-description {
-  margin: 1.2rem;
-  margin-bottom: 4rem;
+
+/* Mobile */
+@media screen and (max-width: 600px) {
+  .services {
+    padding: 3rem 0;
+  }
+  .service-title {
+    margin: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
+  }
+  .service-description {
+    margin: 0.6rem;
+    margin-bottom: 3rem;
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 600px) {
+  .services {
+    padding: 6rem 0;
+  }
+  .service-title {
+    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    font-size: 2.6rem;
+  }
+  .service-description {
+    margin: 1.2rem;
+    margin-bottom: 4rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
